Preventing scrolling to sides on mobile devices

--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
     background-color: #1E1D2F;
     font-family: JetbrainsMono;
     overflow-x: hidden;
+    max-width: 100%;
+    max-height: 100%;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 h1{
@@ -21,6 +25,10 @@ a:link{
 
 a:visited{
     color: #DDB6F2
+}
+
+button:hover{
+    cursor: pointer;
 }
 
 .MenuButton{
@@ -90,21 +98,23 @@ a:visited{
     justify-content: space-around;
 }
 
-#HomeDiv{
+.page{
     position: absolute;
-    left:0%;
     width: 100%;
+    height: 100%;
+    top: 100%;
+}
+
+
+#HomeDiv{
+    left:0%;    
 }
 
 #ProjectDiv{
-    position: absolute;
     left:100%;
-    width: 100%;
 }
 
 #ContactDiv{
-    position: absolute;
     left: 200%;
-    width: 100%;
 }
 
